--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +17,98 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a{
+  color: black;
+  text-decoration: none;
+}
+.header{
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(202, 125, 125);
+  gap:40px;
+  cursor: pointer;
+}
+.header p{
+  font-size: 20px;
+  color: white;
+}
+.header p:hover{
+  color: blue;
+}
+.home{
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://images.unsplash.com/photo-1574169208507-84376144848b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1479&q=80');
+ display: flex;
+ align-items: center;
+ justify-content: center;
+  
+}
+.home1{
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ 
+  gap:20px;
+  }
+  .flex{
+    width:800px;
+    align-items: center;
+  }
+  .flex h1{
+   padding: 30px;
+    text-align: center;
+   
+  }
+  .flex p{
+    color: wheat;
+  }
+  .col{
+    display: flex;
+    gap:50px;
+    cursor: pointer;
+
+  }
+  .col p{
+    background-color: #2196f3;
+    border: 1px solid ;
+    border-radius: 5px;
+    padding: 10px 25px;
+    color: white;
+  }
+  .col p:hover{
+    color: black;
+    background-color: aqua;
+  }
+
+  .service{
+    width:100%;
+    height:100vh;
+    background-image: url('https://images.unsplash.com/photo-1485529910432-783b455774fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');
+  
+  }
+  .serv{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:15px;
+    width:400px;
+    margin-left: 450px;
+    margin-right: 250px;
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: 0px 0px 1px 1px white;
+    
+  }
+  .serv p{
+    
+    color: white;
+    font-size: 20px;
+    
+  }
