--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ a{
    
   }
   .flex p{
-    color: wheat;
+    color: rgb(250, 244, 233);
   }
   .col{
     display: flex;
@@ -86,6 +86,18 @@ a{
     background-color: aqua;
   }
 
+  .span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:30px;
+  }
+  span{
+    color: wheat;
+    font-size: 20px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
   .service{
     width:100%;
     height:100vh;
