--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -59,3 +59,20 @@ button{
     border-radius: 10px;
     font-size: 14px;
 }
+
+@media screen and (max-width: 600px){
+
+    form{
+        padding: 20px 20px;
+        width: max-content;
+        height:max-content;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        gap:10px;
+        border-radius: 10px;
+        box-shadow: 0px  0px 1px 1px #000;
+    }
+}
